# bp

./: .gitignore  1
TP_MRVK/: .gitignore  README.md  path_detection_node.py
TP_MRVK/detected_path_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
TP_MRVK/detected_path_layer/include/detected_path_layer/: detected_path_layer.h
TP_MRVK/detected_path_layer/src/: detected_path_layer.cpp
TP_MRVK/docs/: architecture_ru.md
TP_MRVK/docs/bags/: gp.py
TP_MRVK/docs/bags/9_shp/: summary.csv  summary.txt
TP_MRVK/docs/bags/9_shp_dwa/: summary.csv  summary.txt
TP_MRVK/docs/bags/cohead/: summary.csv  summary.txt
TP_MRVK/docs/bags/cohead_dwa/: summary.csv  summary.txt
TP_MRVK/docs/bags/corridor.b/: summary.csv  summary.txt
TP_MRVK/docs/bags/corridor.b_dwa/: summary.csv  summary.txt
TP_MRVK/dynamic_filter/: CMakeLists.txt  package.xml
TP_MRVK/dynamic_filter/launch/: obstacles.launch
TP_MRVK/dynamic_filter/src/: dynamic_filter.cpp
TP_MRVK/imu_quat_to_eul/: CMakeLists.txt  package.xml
TP_MRVK/imu_quat_to_eul/msg/: EulRot.msg
TP_MRVK/imu_quat_to_eul/scripts/: imu_quat_to_eul_node.py
TP_MRVK/mrvk_description/urdf/: base_macro.urdf.xacro  lidar_macro.urdf.xacro  robot.plugins.xacro  robot.urdf.xacro  ultrasonic_sensor_macro.urdf.xacro  wheel_macro.urdf.xacro
TP_MRVK/mrvk_gazebo/: CMakeLists.txt  package.xml
TP_MRVK/mrvk_gazebo/config/: ekf.yaml
TP_MRVK/mrvk_gazebo/config/costmap/: costmap_common.yaml  global_costmap.yaml  global_costmap_debug.yaml  laser_self_filter.yaml  local_costmap.yaml
TP_MRVK/mrvk_gazebo/config/navigation/: base_local_planner.yaml  dwa_local_planner.yaml  exp.yaml  improved_dwa_params.yaml  move_base.yaml
TP_MRVK/mrvk_gazebo/config/rviz/: config.rviz
TP_MRVK/mrvk_gazebo/config/slam/: gmapping.yaml  slam_toolbox_params.yaml
TP_MRVK/mrvk_gazebo/launch/: gazebo.launch  move_base_new.launch  new_robot.launch  robot.launch  test.launch
TP_MRVK/mrvk_gazebo/scripts/: calibrate_ipm.py  fixed_tf.py  full_dataset.py  imeg_to_dataset.py  lane_detector.py  lidar_camera_fusion.cpp  move_sphere.py  move_two_spheres.py  run_9_spheres_not_random.py  run_experiment.py  run_five_spheres_random.py  run_head_of_obstacles.py  run_optimization.py  scan_merger.py  scan_static_temporal_filter.py  send_goal.py  slam_map_cleaner.py  sphere_to_tf.py  train_rf.py
TP_MRVK/mrvk_gazebo/scripts/bp_real_working/: corridor.py  head.py  run9.py
TP_MRVK/mrvk_gazebo/worlds/: baylands.sdf  baylands.world  dynamic.world  empty.world  example.world
TP_MRVK/path_detector/: CMakeLists.txt  package.xml
TP_MRVK/path_detector/msg/: DetectedPath.msg
TP_MRVK/path_detector/src/: path_detection.cpp  path_detection.py
TP_MRVK/road_segmentation/: CMakeLists.txt  package.xml
TP_MRVK/road_segmentation/launch/: road_segmentation.launch
TP_MRVK/road_segmentation/scripts/: inspect_model.py
TP_MRVK/road_segmentation/src/: road_segmentation_node.py
dynamic_obstacle_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
dynamic_obstacle_layer/include/dynamic_obstacle_layer/: dynamic_obstacle_layer.h
dynamic_obstacle_layer/src/: dynamic_obstacle_layer.cpp
improved_dwa_local_planner/: CMakeLists.txt  package.xml  planner_plugins.xml
improved_dwa_local_planner/include/improved_dwa_local_planner/: improved_dwa_local_planner.h
improved_dwa_local_planner/src/: improved_dwa_local_planner.cpp
mapping_node/: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
mapping_node/include/mapping_node/: mapping_node.h
mapping_node/launch/: mapping_node.launch
mapping_node/src/: CMakeLists.txt  mapping_node.cpp
obstacle_detector/msg/: CircleObstacle.msg
tracked_obstacle_msgs/: CMakeLists.txt  package.xml
tracked_obstacle_msgs/msg/: TrackedCircle.msg  TrackedCircleArray.msg
