<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_layer</name>
  <version>1.0.0</version>
  <description>costmap_2d plugin that erases dynamic obstacle footprints from the costmap</description>
  <maintainer email="user@example.com">MRVK Team</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tracked_obstacle_msgs</depend>
  <export>
    <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
  </export>
</package>
