<?xml version="1.0"?>
<package format="2">
  <name>tracked_obstacle_msgs</name>
  <version>0.1.0</version>
  <description>
    Custom ROS messages for obstacles enriched with SpatialMemory state:
    ghost/unstable flags, predicted positions, TTL-based tracking.
  </description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
</package>
