<?xml version="1.0"?>
<package format="2">
  <name>dynamic_filter</name>
  <version>0.0.0</version>
  <description>The dynamic_filter package</description>

  <!-- ВЫ ЗАБЫЛИ ВОТ ЭТИ ДВЕ СТРОКИ: -->
  <maintainer email="yehor@todo.todo">yehor</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Зависимости для сборки -->
  <build_depend>laser_geometry</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <build_depend>obstacle_detector</build_depend>
  <build_depend>tracked_obstacle_msgs</build_depend>

  <!-- Зависимости для запуска -->
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>

  <exec_depend>obstacle_detector</exec_depend>
  <exec_depend>tracked_obstacle_msgs</exec_depend>

</package>