<?xml version="1.0"?>
<package format="2">
  <name>road_segmentation</name>
  <version>0.0.1</version>
  <description>Deep learning based road segmentation using ONNX Runtime</description>
  <maintainer email="yehor@todo.todo">yehor</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
  </export>
</package>
